--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <a class="navbar-brand js-scroll-trigger" href="#about">
 		<img class="d-block d-lg-none rounded-circle" src="img/pdp.png" alt="Photo Houssam" id="brand_logo">
-		<span class="d-block d-lg-none">Hosusam Zineddine</span>
+		<span class="d-block d-lg-none">Houssam Zineddine</span>
 		<span class="d-none d-lg-block">
 		  <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/pdp.png" alt="Photo Houssam">
 		</span>
