--- a/index.html
+++ b/index.html
@@ -436,7 +436,12 @@
                 </ul>
             </div>
         </section>
-
+	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contact">
+            <div class="my-auto">
+                <h2 class="mb-5">Contact</h2>
+                <p class="mb-5">Interested in my profile? <br> Please contact me on <a href="https://www.linkedin.com/in/houssam-zineddine/" target="_blank">LinkedIn</a> or use the following email address: <a href="mailto:houssam.zineddine@student.isae-supaero.fr" id="emailLink"> houssam.zineddine@student.isae-supaero.fr</a>.</p>
+            </div>
+        </section>
        
 
     </div>
